# citadel

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
android-app/: .gitignore  build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: README.md
android-app/app/src/main/java/com/example/securevm/: SecureVm.kt
android-app/app/src/main/java/com/example/securevm/demo/: MainActivity.kt
android-app/app/src/main/jniLibs/: README.md
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml
android-app/app/src/main/res/xml/: data_extraction_rules.xml
android-app/gradle/: libs.versions.toml
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: 01-intro.md  02-cryptography.md  03-android-security.md  04-requirements.md  05-architecture.md  06-security-design.md  07-vm-design.md  08-implementation.md  09-asset-generation.md  10-kotlin-integration.md  11-ci-practices.md  12-release-checklist.md  13-glossary.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_license_bytes.rs  fuzz_program_bytes.rs  fuzz_store_bytes.rs
obfuscator/: CMakeLists.txt  ControlFlowFlattening.cpp  ControlFlowFlattening.h  InstructionSubstitution.cpp  InstructionSubstitution.h  ObfuscatorPlugin.cpp
scripts/: build_android_obfuscated.sh  build_obfuscator.sh
src/: apk.rs  bytecode.rs  environment.rs  error.rs  firmware.rs  integrity.rs  jni_api.rs  keys.rs  keystore.rs  lib.rs  memguard.rs  storage.rs  vm.rs  wbc.rs
tests/: vm_tests.rs
tools/gen_assets/: Cargo.toml
tools/gen_assets/src/: main.rs
